[package]
name = "project-checker"
version = "0.1.0"
authors = ["Abhijat Malviya <abhijat@ridecell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
strsim = "0.9.2"
rayon = "1.2"
clap = "2.33"
structopt = "0.3"